--- a/themes/default/views/layout.html
+++ b/themes/default/views/layout.html
@@ -9,6 +9,9 @@
 	
 	<!-- Google Fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
+	<!-- Font Awesome CDN -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+
 	
 	@{import('meta', 'default.css', 'default.js')}
 	
